--- a/_posts/2024-01-03-Welcome.md
+++ b/_posts/2024-01-03-Welcome.md
@@ -12,7 +12,7 @@ math: true
 mermaid: true
 image:
   path: /images/0101.png
-  alt: Here is the typical tTemplate for the following graph
+  alt: Below is the template for the subsequent paragraph.
 ---
 
 This post is to show Markdown syntax rendering on [**TSdreamer**](https://github.com/TSdreamer), you can also use it as an example of writing. Now, let's start looking at text and typography.
